traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:11: error: Unmatched closing brace '}' ignored here
    }
    ^TraversalDiagonal:18: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:21: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:24: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:27: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:30: error: Unmatched closing brace '}' ignored here
}
^